--- a/Audio Diary/Base.lproj/Main.storyboard
+++ b/Audio Diary/Base.lproj/Main.storyboard
@@ -30,10 +30,26 @@
                     <view key="view" contentMode="scaleToFill" id="zAj-yc-sns">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jks-et-ark">
+                                <rect key="frame" x="196" y="641" width="22" height="22"/>
+                                <state key="normal" image="star.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="onRecordButtonTap:" destination="I0b-Ty-Oll" eventType="touchUpInside" id="Xlg-1d-Zyd"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jks-et-ark" firstAttribute="centerX" secondItem="zAj-yc-sns" secondAttribute="centerX" id="32G-7h-9uS"/>
+                            <constraint firstItem="OIg-9K-eSv" firstAttribute="bottom" secondItem="jks-et-ark" secondAttribute="bottom" constant="150" id="P07-go-PX9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="OIg-9K-eSv"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Record" image="stop.circle" catalog="system" id="Tht-V4-u67"/>
+                    <connections>
+                        <outlet property="recordButton" destination="jks-et-ark" id="jE1-mq-VBX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="17k-QN-qMN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -147,6 +163,7 @@
     <resources>
         <image name="chart.pie.fill" catalog="system" width="128" height="124"/>
         <image name="folder" catalog="system" width="128" height="95"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="stop.circle" catalog="system" width="128" height="121"/>
     </resources>
 </document>
